--- a/internship-fe/src/styles/index.scss
+++ b/internship-fe/src/styles/index.scss
@@ -1,9 +1,6 @@
 @import "variables";
 
-@import '../../node_modules/bootstrap/scss/bootstrap';
-@import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
 
 @import "custom-styles";
-.error{
-  color:red;
-}
