fixes and layout update

--- a/src/styles/new-styles.css
+++ b/src/styles/new-styles.css
@@ -1,15 +1,33 @@
-.onHover{
-    display: flex;
-    justify-content: center;
+*{
+    box-sizing: border-box;
 }
-.onHover:hover{
-    background-color:rgb(242 244 245);
-    cursor: pointer;
-    border-radius: 50px;
-}
-
 .photoAdsStyle {
     max-width: 100px;
+}
+.dupa{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5px;
+    object-fit: contain;
+    cursor: pointer;
+}
+.dupa2{
+    position: absolute;
+    opacity: 0;
+    width: 87%;
+    height: 40%;
+    font-size: 5rem;
+    z-index: 1;
+    top:30%;
+    color:#dc3545;
+}
+.dupa2:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+.detailBg{
+    background-color: #e6e6f0;
+    margin: 5px;
 }
 
 
