--- a/src/styles/new-styles.css
+++ b/src/styles/new-styles.css
@@ -54,6 +54,14 @@
 .xd2{
     border: 4px solid black;
 }
+.dupa{
+    position: relative;
+    text-align: right;
+    z-index: 1000;
+    font-size: 30px;
+    left: 90%;
+    margin-top: -16%;
+}
 
 
 
