--- a/src/styles/new-styles.css
+++ b/src/styles/new-styles.css
@@ -1,24 +1,27 @@
 *{
     box-sizing: border-box;
 }
-.photoAdsStyle {
-    max-width: 100px;
+.photoWrap {
+    max-width: 150px;
 }
-.PhotoListStyles{
+.PhotoListStyles, photoAdsStyle{
     width: 100%;
     height: 100%;
-    margin-bottom: 5px;
     object-fit: contain;
     cursor: pointer;
 }
 .FrontingDeleteButton{
+    box-sizing: content-box;
     position: absolute;
+    font-size: 57px;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    padding: 50px;
+    cursor: pointer;
+    color: red;
     opacity: 0;
-    width: 87%;
-    height: 40%;
-    font-size: 5rem;
-    top:30%;
-    color:#dc3545;
 }
 .FrontingDeleteButton:hover{
     opacity: 1;
@@ -54,13 +57,17 @@
 .xd2{
     border: 4px solid black;
 }
-.dupa{
+.enlargeWrapper{
     position: relative;
-    text-align: right;
+
+}
+.enlargeButton{
+    position: absolute;
     font-size: 50px;
+    transform: translate(-95%, -95%);
     z-index: 2;
-    left: 86%;
-    margin-top: -16vh;
+    left: 95%;
+    top: 95%;
     padding: 5px;
     cursor: pointer;
     background-color:rgba(178,178,180,0.5);
